--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -20,13 +20,14 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0;
+  position: relative;
 }
 
 .thingies {
-  flex: 1 1 30%;
-  margin: 10px;
-  min-width: 250px;
+  flex: 1 1 20%;
+  min-width: 225px;
   text-align: center;
+  margin: 110px auto 0 auto;
 }
 
 h1 {
@@ -35,4 +36,26 @@ h1 {
 
 form {
   padding-top: 10px;
+}
+
+#pfp {
+  position: absolute;
+  top: -230px;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0px 0px 18px white;
+  border-radius: 50%;
+}
+
+#bigheader {
+  font-size: 3em;
+  font-style: italic;
+  margin-top: 35px;
+  text-align: center;
+  color:white;
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: -1;
 }
