--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -41,10 +41,15 @@ form {
 #pfp {
   position: absolute;
   top: -230px;
-  left: 50%;
-  transform: translateX(-50%);
   box-shadow: 0px 0px 18px white;
   border-radius: 50%;
+  transition: transform .35s ease-in-out;
+  transform: translate3d(0px, 0px, 0px);
+
+}
+
+#pfp:hover {
+  transform: scale(1.1);
 }
 
 #bigheader {
