--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -23,7 +23,7 @@ body {
   position: relative;
 }
 
-.thingies {
+.bars {
   flex: 1 1 20%;
   min-width: 230px;
   text-align: center;
@@ -68,7 +68,6 @@ form {
 a {
   text-decoration: none;
   color: #C4C7C5;
-}
 
 a:hover {
   text-decoration: underline;
